--- a/style.css
+++ b/style.css
@@ -199,4 +199,36 @@ h4 {
     width: 35rem;
     max-width: 90%;
   }
+
+  .description {
+    width: 100%;
+    max-width: 90%;
+    margin: 2.4rem 0;
+    padding: 2.4rem 0;
+    border-top: 0.1rem solid var(--grey);
+    border-bottom: 0.1rem solid var(--grey);
+  }
+  .description h3 {
+    font-weight: 800;
+    font-size: 1.4rem;
+    line-height: 1.5rem;
+    text-transform: uppercase;
+    color: var(--black);
+  }
+
+  .description p {
+    margin-top: 0.8rem;
+    font-weight: 500;
+    font-size: 1.6rem;
+  }
+
+  .now-description {
+    margin: 2.4rem 0 0 0;
+    width: 100%;
+    max-width: 90%;
+    font-weight: 500;
+    font-size: 3.2rem;
+    line-height: 3.52rem;
+    color: var(--black);
+  }
 }
