--- a/style.css
+++ b/style.css
@@ -122,9 +122,12 @@ h4 {
     align-items: center;
   }
 
+  .article {
+    width: 100%;
+    max-width: 90%;
+  }
   .goal-wrapper {
     margin-top: 3.2rem;
-    width: 100%;
     height: 6.4rem;
     background-color: var(--blue);
     display: flex;
@@ -230,5 +233,22 @@ h4 {
     font-size: 3.2rem;
     line-height: 3.52rem;
     color: var(--black);
+  }
+
+  .footer .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-description {
+    margin-top: 1.6rem;
+    width: 100%;
+    max-width: 80%;
+    text-align: center;
+    font-weight: 700;
+    font-size: 1.6rem;
+    line-height: 1.5rem;
+    text-transform: uppercase;
   }
 }
