--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ h4 {
   }
 
   .flag-container {
-    margin-top: 2.4rem;
+    margin: 2.4rem 0 3.2rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -171,7 +171,8 @@ h4 {
     margin-top: 2rem;
   }
 
-  .banks-list a {
+  .banks-list a,
+  button {
     border: 0.2rem solid var(--blue);
     border-radius: 0.8rem;
     font-weight: 700;
@@ -183,16 +184,9 @@ h4 {
     align-items: center;
     padding: 2rem 3.5rem 2rem 1.6rem;
     color: var(--blue);
+    background-color: var(--white);
     font-weight: 700;
     font-size: 1.6rem;
-  }
-
-  .list-link {
-    width: 100%;
-    display: flex;
-    justify-content: start;
-    flex-direction: column;
-    align-items: start;
   }
 
   .link-btn div {
