--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ h4 {
   .description {
     width: 100%;
     max-width: 90%;
-    margin: 2.4rem 0;
+    margin: 2.4rem 0 0 0;
     padding: 2.4rem 0;
     border-top: 0.1rem solid var(--grey);
     border-bottom: 0.1rem solid var(--grey);
