--- a/style.css
+++ b/style.css
@@ -75,9 +75,9 @@ h4 {
   .container {
     margin: 0 auto;
     width: 100%;
-    max-width: 90%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
   }
   .header {
@@ -241,6 +241,189 @@ h4 {
     margin-top: 1.6rem;
     width: 100%;
     max-width: 80%;
+    text-align: center;
+    font-weight: 700;
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    text-transform: uppercase;
+  }
+
+  .succes-copied {
+    background-color: var(--blue);
+    color: var(--white);
+  }
+}
+@media screen and (min-width: 577px) {
+  .container {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 40%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .header {
+    margin-top: 0.875rem;
+  }
+
+  .flag-container {
+    margin: 2.4rem 0 3.2rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 8rem;
+    height: 5rem;
+  }
+  .flag-container::after {
+    content: '❤️ зсу';
+    position: absolute;
+    color: var(--white);
+    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 1.4rem;
+    text-align: center;
+    letter-spacing: -0.02em;
+    text-transform: uppercase;
+  }
+
+  .flag-blue {
+    width: 8rem;
+    height: 2.5rem;
+    background-color: var(--blue);
+  }
+  .flag-yellow {
+    width: 8rem;
+    height: 2.5rem;
+    background-color: var(--yellow);
+  }
+
+  .main-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .article {
+    width: 100%;
+    max-width: 90%;
+  }
+  .goal-wrapper {
+    margin-top: 3.2rem;
+    height: 6.4rem;
+    background-color: var(--blue);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10rem;
+  }
+  .goal-wrapper h1 {
+    padding: 1.6rem;
+    font-size: 3.2rem;
+    font-weight: 500;
+    font-style: normal;
+    color: var(--white);
+  }
+
+  .important-section p {
+    margin-top: 1.6rem;
+    font-size: 1.2rem;
+    font-weight: 800;
+    font-style: normal;
+    color: var(--black);
+    text-transform: uppercase;
+  }
+
+  .banks-list {
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    flex-direction: column;
+    margin-top: 3.2rem;
+    width: 100%;
+    max-width: 90%;
+  }
+
+  .banks-list p {
+    font-size: 1.2rem;
+    font-weight: 800;
+    color: var(--grey);
+    text-transform: uppercase;
+  }
+
+  .banks-list p:not(:first-child) {
+    margin-top: 2rem;
+  }
+
+  .banks-list a,
+  button {
+    border: 0.2rem solid var(--blue);
+    border-radius: 0.8rem;
+    font-weight: 700;
+    font-size: 1.6rem;
+    line-height: 1.9rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 1.6rem 2rem 1.6rem;
+    color: var(--blue);
+    background-color: var(--white);
+    font-weight: 700;
+    font-size: 1.6rem;
+  }
+
+  .link-btn div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 35rem;
+    max-width: 90%;
+  }
+
+  .description {
+    width: 100%;
+    max-width: 90%;
+    margin: 2.4rem 0 0 0;
+    padding: 2.4rem 0;
+    border-top: 0.1rem solid var(--grey);
+    border-bottom: 0.1rem solid var(--grey);
+  }
+  .description h3 {
+    font-weight: 800;
+    font-size: 1.4rem;
+    line-height: 1.5rem;
+    text-transform: uppercase;
+    color: var(--black);
+  }
+
+  .description p {
+    margin-top: 0.8rem;
+    font-weight: 500;
+    font-size: 1.6rem;
+  }
+
+  .now-description {
+    margin: 2.4rem 0 0 0;
+    width: 100%;
+    max-width: 90%;
+    font-weight: 500;
+    font-size: 3.2rem;
+    line-height: 3.52rem;
+    color: var(--black);
+  }
+
+  .footer .container {
+    width: 100%;
+    max-width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-description {
+    margin-top: 1.6rem;
     text-align: center;
     font-weight: 700;
     font-size: 1.2rem;
